--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "native",
-  "version": "1.0.0",
-  "description": "",
+  "name": "ossim-js",
+  "version": "0.1.0",
+  "description": "Native bindings to the OSSIM(Open Source Software Image Map) geospatial image processing library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Raul Marquez Jr",
+  "license": "MIT License",
   "dependencies": {
     "bindings": "^1.3.0",
     "node-addon-api": "^1.3.0"
