--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,29 @@
+cmake_minimum_required(VERSION 2.8)
 project (ossim)
+#unset(CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES)
+#unset(CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "/usr/share/ossim/CMakeModules")
+
 include_directories(${CMAKE_JS_INC})
 
-
-# Declare the source files location
-file(GLOB SOURCE_FILES "./*.cpp")
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "/usr/local/share/ossim/CMakeModules")
-SET(OSSIM_LIBRARY "ossim" CACHE STRING "Caching" FORCE)
-
-
-INCLUDE(OssimVersion)
-INCLUDE(OssimUtilities)
-INCLUDE(OssimCommonVariables)
-
-find_package(ossim)
-
-
-if(ossim_FOUND)
-	MESSAGE( STATUS "FOUND OSSIM!!!!!!!!")
-    include_directories(${ossim_INCLUDE_DIR})
-    target_link_libraries(${PROJECT_NAME} ${ossim_LIBS})
-endif( ossim_FOUND )
+find_package( ossim REQUIRED)
+if( OSSIM_FOUND )
+    include_directories( ${OSSIM_INCLUDE_DIR} )
+else( OSSIM_FOUND )
+   message( FATAL_ERROR "Could not find required OSSIM package!" )
+endif( OSSIM_FOUND )
 
 find_package( JsonCpp )
 if( JSONCPP_FOUND )
    include_directories( ${JSONCPP_INCLUDE_DIR} )
-   set( requiredLibs ${requiredLibs} ${JSONCPP_LIBRARY} )
    message("Found JsonCpp" )
 else( JSONCPP_FOUND )
    message( FATAL_ERROR "Could not find required JsonCpp package!" )
 endif( JSONCPP_FOUND )
 
-MESSAGE( STATUS "OSSIM_INCLUDE_DIR=${OSSIM_INCLUDE_DIR}")
-MESSAGE( STATUS "OSSIM_LIBRARIES =${OSSIM_LIBRARIES}")
-
+# Declare the source files location
+file(GLOB SOURCE_FILES "./*.cpp")
 
 # This line will tell CMake that we're building a shared library
 # from the above source files
@@ -49,4 +39,4 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/node_mod
 
 # Essential library files to link to a node addon,
 # you should add this line in every CMake.js based project.
-target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
+target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB} ${OSSIM_LIBRARIES})
