--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "native",
-  "version": "1.0.0",
+  "name": "ossim-js",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bindings": "^1.3.0"
+    "bindings": "^1.3.0",
+    "bluebird": "^3.5.1"
   },
   "devDependencies": {
     "node-addon-api": "^1.3.0"
