--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "cmake-js compile"
+    "compile": "cmake-js compile",
+    "postinstall" : "cmake-js compile"
+  },
+  "bin": {
+    "ossim-js-info": "bin/ossim-cmdl.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bindings": "^1.3.0",
-    "bluebird": "^3.5.1"
+    "bluebird": "^3.5.1",
+    "dot-object": "^1.7.0",
+    "underscore.string": "^3.3.4",
+    "node-addon-api": "^1.3.0"
   },
   "devDependencies": {
     "node-addon-api": "^1.3.0"
